--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "gsap": "^3.12.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
