--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.33",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.0",
     "gsap": "^3.12.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
